// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserInfo component UserInfo should render match snapshot 1`] = `
<div>
  <div
    class="dark:bg-indigo bg-white p-[17px] rounded-md"
  >
    <div
      class="w-full h-[131px] relative"
    >
      <img
        alt="background-profile"
        class="object-cover rounded-2xl"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="(max-width: 768px) 315px, (min-width: 769px) and (max-width: 1024px) 396px, (min-width: 1025px) 518px"
        src="/_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=3840&q=75"
        srcset="/_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=16&q=75 16w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=32&q=75 32w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=48&q=75 48w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=64&q=75 64w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=96&q=75 96w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=128&q=75 128w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=256&q=75 256w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=384&q=75 384w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=640&q=75 640w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=750&q=75 750w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=828&q=75 828w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=1080&q=75 1080w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=1200&q=75 1200w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=1920&q=75 1920w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=2048&q=75 2048w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
      <div
        class="absolute top-[85px] left-[130px] md:left-[300px] lg:left-[430px] xl:left-[490px] 2xl:left-[200px]"
      >
        <span
          class="flex relative justify-center items-center box-border overflow-hidden align-middle z-0 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny bg-default text-default-foreground rounded-full w-[87px] h-[87px] border-4 dark:border-indigo border-white"
          tabindex="-1"
        >
          <img
            alt="avatar-user"
            class="flex object-cover w-full h-full transition-opacity !duration-500 opacity-0 data-[loaded=true]:opacity-100"
            data-nimg="1"
            decoding="async"
            height="87"
            loading="lazy"
            src="/_next/image?url=%2Fdefault-avatar.webp&w=256&q=75"
            srcset="/_next/image?url=%2Fdefault-avatar.webp&w=96&q=75 1x, /_next/image?url=%2Fdefault-avatar.webp&w=256&q=75 2x"
            style="color: transparent;"
            width="87"
          />
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-center mt-14"
    >
      <div
        class=""
      >
        <p
          class="text-primary dark:text-white leading-xl text-[20px] text-center font-extrabold"
        >
          Adela Parkson
        </p>
        <p
          class="text-secondary dark:text-secondary text-small font-medium text-center"
        >
          Creative Director
        </p>
      </div>
      <div
        class="flex justify-center gap-11 my-5"
      >
        <div
          class="w-14 text-center"
        >
          <p
            class="text-primary dark:text-white text-1.5xl leading-xl font-extrabold leading-6"
          >
            0
          </p>
          <p
            class="text-secondary dark:text-secondary text-small font-medium leading-5"
          >
            Posts
          </p>
        </div>
        <div
          class="w-14 text-center"
        >
          <p
            class="text-primary dark:text-white text-1.5xl leading-xl font-extrabold leading-6"
          >
            0
          </p>
          <p
            class="text-secondary dark:text-secondary text-small font-medium leading-5"
          >
            Followers
          </p>
        </div>
        <div
          class="w-14 text-center"
        >
          <p
            class="text-primary dark:text-white text-1.5xl leading-xl font-extrabold leading-6"
          >
            0
          </p>
          <p
            class="text-secondary dark:text-secondary text-small font-medium leading-5"
          >
            Following
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserInfo component UserInfo should render without avatar props 1`] = `
<div>
  <div
    class="dark:bg-indigo bg-white p-[17px] rounded-md"
  >
    <div
      class="w-full h-[131px] relative"
    >
      <img
        alt="background-profile"
        class="object-cover rounded-2xl"
        data-nimg="fill"
        decoding="async"
        loading="lazy"
        sizes="(max-width: 768px) 315px, (min-width: 769px) and (max-width: 1024px) 396px, (min-width: 1025px) 518px"
        src="/_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=3840&q=75"
        srcset="/_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=16&q=75 16w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=32&q=75 32w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=48&q=75 48w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=64&q=75 64w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=96&q=75 96w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=128&q=75 128w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=256&q=75 256w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=384&q=75 384w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=640&q=75 640w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=750&q=75 750w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=828&q=75 828w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=1080&q=75 1080w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=1200&q=75 1200w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=1920&q=75 1920w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=2048&q=75 2048w, /_next/image?url=%2Fprofile%2Fbackground-profile.webp&w=3840&q=75 3840w"
        style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
      />
      <div
        class="absolute top-[85px] left-[130px] md:left-[300px] lg:left-[430px] xl:left-[490px] 2xl:left-[200px]"
      >
        <span
          class="flex relative justify-center items-center box-border overflow-hidden align-middle z-0 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny bg-default text-default-foreground rounded-full w-[87px] h-[87px] border-4 dark:border-indigo border-white"
          tabindex="-1"
        >
          <span
            aria-label="avatar-user"
            class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 flex items-center justify-center text-inherit w-full h-full"
            role="img"
          >
            <svg
              aria-hidden="true"
              fill="none"
              height="80%"
              role="presentation"
              viewBox="0 0 24 24"
              width="80%"
            >
              <path
                d="M12 2C9.38 2 7.25 4.13 7.25 6.75C7.25 9.32 9.26 11.4 11.88 11.49C11.96 11.48 12.04 11.48 12.1 11.49C12.12 11.49 12.13 11.49 12.15 11.49C12.16 11.49 12.16 11.49 12.17 11.49C14.73 11.4 16.74 9.32 16.75 6.75C16.75 4.13 14.62 2 12 2Z"
                fill="currentColor"
              />
              <path
                d="M17.0809 14.1489C14.2909 12.2889 9.74094 12.2889 6.93094 14.1489C5.66094 14.9989 4.96094 16.1489 4.96094 17.3789C4.96094 18.6089 5.66094 19.7489 6.92094 20.5889C8.32094 21.5289 10.1609 21.9989 12.0009 21.9989C13.8409 21.9989 15.6809 21.5289 17.0809 20.5889C18.3409 19.7389 19.0409 18.5989 19.0409 17.3589C19.0309 16.1289 18.3409 14.9889 17.0809 14.1489Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex flex-col justify-center mt-14"
    >
      <div
        class=""
      >
        <p
          class="text-primary dark:text-white leading-xl text-[20px] text-center font-extrabold"
        >
          Adela Parkson
        </p>
        <p
          class="text-secondary dark:text-secondary text-small font-medium text-center"
        >
          Creative Director
        </p>
      </div>
      <div
        class="flex justify-center gap-11 my-5"
      >
        <div
          class="w-14 text-center"
        >
          <p
            class="text-primary dark:text-white text-1.5xl leading-xl font-extrabold leading-6"
          >
            0
          </p>
          <p
            class="text-secondary dark:text-secondary text-small font-medium leading-5"
          >
            Posts
          </p>
        </div>
        <div
          class="w-14 text-center"
        >
          <p
            class="text-primary dark:text-white text-1.5xl leading-xl font-extrabold leading-6"
          >
            0
          </p>
          <p
            class="text-secondary dark:text-secondary text-small font-medium leading-5"
          >
            Followers
          </p>
        </div>
        <div
          class="w-14 text-center"
        >
          <p
            class="text-primary dark:text-white text-1.5xl leading-xl font-extrabold leading-6"
          >
            0
          </p>
          <p
            class="text-secondary dark:text-secondary text-small font-medium leading-5"
          >
            Following
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
